_app/assets/themes/alchemy/_scss/_extra.scss
:root {
    --link-color-h: 285;
    --link-color-s: 84%;
    --link-color-l: 45%;
    --color-primary: var(--link-color);
}

@font-face {
    font-family: bickham-script-pro-3;
    font-weight: 700;
    font-style: normal;
    src: url(/assets/fonts/bickham-script-pro-3-bold.woff2) format("woff2")
}

.watermark {
    font-family: bickham-script-pro-3;
    font-feature-settings: "swsh";
    opacity: .02;
    position: absolute;
    user-select: none;
    top: 0;
    left: 0;
    right: 0;
    z-index: -1;
    font-size: 10vw;
    width: 100%;
    text-align: center;
    margin: 0;
    padding: 0;

}

#markdown-toc a {
    text-decoration: none;
    color: var(--link-color);
}

.content > p > a {
    color: var(--link-color);
    font-weight: 500;
}

.content.read {
    line-height: 1.71em;
}

.content blockquote {
    position: relative;
    margin-bottom: 2.8rem;
    margin-left: 0;
    font-size: 90%;
}

.content blockquote > p {
    padding-left: 1em;
    border-left: 2px solid var(--link-color);
    padding-bottom: 0;
    margin-bottom: 0;
}

code {
    font-size: 1em;
    display: inline;
    line-break: anywhere;
}

pre > code {
    padding: 0;
    white-space: pre;
    display: block;
}

.content > img {
    --space-deco: 8vw;
    display: block;
    width: calc(100% + var(--space-deco) * 2);
    margin-left: calc(var(--space-deco) * -1);
    margin-right: calc(var(--space-deco) * -1);
    margin-bottom: 1.8rem;
    margin-top: 1.8rem;
}

@media (min-width: 49em) {
    .header h1 {
        font-size: 2.2vw;
    }
}

@media (max-width: 48em) {
    .header h1 {
        font-size: 130%;
    }
}

@media (max-width: 1080px) {
    .content > img {
        --space-deco: 8vw;
    }
}

@media (max-width: 640px) {
    .content > img {
        --space-deco: 4vw;
    }
}

h2:not(:first-child) {
    margin: 4vh 0 1rem;
}

pre,
.highlight > pre,
.highlighter-rouge pre.highlight {
    --space-code: 1em;
    padding-top: var(--space-code);
    padding-bottom: var(--space-code);
    padding-left: var(--space-code);
    padding-right: var(--space-code);
    margin-left: calc(var(--space-code) * -1);
    margin-right: calc(var(--space-code) * -1);

    margin-bottom: 1.8rem;
    overflow-x: auto;
    font-size: 80%;
    line-height: calc(var(--line-height) * 1.2);

    // Bouncing scroll fix for iOS
    -webkit-overflow-scrolling: touch;

    // Reset overflow for code in code blocks
    code {
        overflow-wrap: normal;
    }
}

@media (min-width: 48em) {
    pre.highlight {
        border-radius: 8px;
    }
}

.footnotes {
    font-size: 80%;

    &::before {
        display: block;
        content: "";
        width: 3px;
        height: 3px;
        margin: 2em auto;
        border-radius: 50%;
        background: var(--on-background-text-color);
        box-shadow: 24px 0 0 0 var(--on-background-text-color), -24px 0 0 0 var(--on-background-text-color);
    }

    p {
        margin: 0;
    }

    ol > li {
        list-style: decimal;

        &::marker {
            color: var(--link-color-decoration);
        }
    }
}

